--- a/usr_share_applications/config-network.desktop
+++ b/usr_share_applications/config-network.desktop
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Name=Network Wizard
 Exec=python /usr/local/bin/config-network.py
-Icon=/usr/share/icons/gTangish-2.0a1/32x32/status/network-transmit-receive.png
+Icon=/usr/share/icons/gnome/32x32/categories/preferences-system-network.png
 Terminal=false
 Type=Application
 Categories=Internet;Network;Settings
